added dettect stuff

--- a/exercises/yara.ipynb
+++ b/exercises/yara.ipynb
@@ -19,24 +19,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Microsoft_Executable]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "matches = rules.match('../files/notepad.txt')\n",
-    "matches"
+    "#### Search the files directory for windows executables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "for file in Path('./files/').rglob('*'):\n",
+    "    print(file, rules.match(str(file)))"
    ]
   },
   {
